tests/fixtures/invalid/max_dict_int.py
# Cannot call max() with Dict[str, int], Int
x = max({"a": 1}, 1)
